@@ -1,5 +1,14 @@
 2008-09-11  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime.el (slime-compilation-unit): Renamed to
+	`slime-compilation-result'.
+	(slime-last-compilation-unit): Renamed to
+	`slime-last-compilation-result'.
+	(slime-compiler-notes, slime-compiler-results): Adapted accordingly.
+	(slime-compilation-finished): Ditto.
+
+2008-09-11  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* slime.el (slime-popup-buffer-restore-snapshot): Make sure that
 	the buffer-local variable containing the popup buffer's snapshot
 	is set to nil in the right buffer.
